[project]
name = "patient-data-expander-tool"
version = "0.1.0"
description = "The Patient Data Expander Tool allows researchers to identify clusters within their patient data sets, select the features that best define those clusters, then query public databases for similar patients and export their data to expand their initial dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ehrapy>=0.14.0",
    "ehrdata>=0.2.1",
    "holoviews>=1.22.1",
    "hvplot>=0.12.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbdev>=3.0.17",
    "pandas>=3.0.3",
    "panel>=1.9.3",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "wordninja>=2.0.0",
]

[project.scripts]
pdet = "pdet.main:main"
